# PrePy

./: CMakeLists.txt  README.md  pre.cpp  pre.hpp
standalone/: CMakeLists.txt  app.cpp  standalone.cpp
