CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(PrePy CXX)

OPTION(PREPY_BUILD_STANDALONE_EXECUTABLE "Should we build the standalone executable?" ${PROJECT_IS_TOP_LEVEL})

SET(CMAKE_CXX_STANDARD 23)

ADD_LIBRARY(prepy pre.cpp)
TARGET_INCLUDE_DIRECTORIES(prepy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if(PREPY_BUILD_STANDALONE_EXECUTABLE)
	ADD_SUBDIRECTORY(standalone)
endif()
